amf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amf-service
  namespace: josepbada-dev
  labels:
    app: amf
    component: 5g-core
spec:
  type: ClusterIP
  selector:
    app: amf
  ports:
  - name: http-api
    protocol: TCP
    port: 8081
    targetPort: 8080
  - name: ngap
    protocol: TCP
    port: 38412
    targetPort: 38412
