nssf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nssf-service
  namespace: josepbada-dev
  labels:
    app: nssf
    component: 5g-core
spec:
  type: ClusterIP
  selector:
    app: nssf
  ports:
  - name: http-api
    protocol: TCP
    port: 8083
    targetPort: 8080
